[project]
name = "qc-coursework"
version = "0.1.0"
description = "Assignments, demos, exercises from quantum computing coursework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "qiskit==1.4.0",
    "qiskit-aer>=0.17.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "FLY", "I", "N", "SIM", "UP", "W"]
ignore = ["D203", "D212"]
